<resources>
    <string name="app_name">BeautySalon</string>

    <string name="worker_mode">직원모드</string>
    <string name="user_id">사용자 Id</string>
    <string name="user_pw">비밀번호</string>
    <string name="auto_login">자동로그인</string>
    <string name="login">로그인</string>
    <string name="id_edit_hint">아이디를 입력하세요.</string>
    <string name="pw_edit_hint">비밀번호를 입력하세요.</string>

    <string name="activity_name">시작하기</string>

    <string name="designer_detail">디자이너 상세정보</string>
    <string name="name">이름</string>
    <string name="gender">성별</string>
    <string name="nickname">닉네임</string>
    <string name="majorname">연령대</string>
    <string name="avgrating">평점</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="check_schedule">일정확인</string>
    <string name="do_reservation">예약하러가기</string>

    <string name="make_Reservation">예약하기</string>
    <string name="Reservation_date">예약 날짜</string>
    <string name="select_date">날짜 선택</string>
    <string name="Reservation_time">예약 시간</string>
    <string name="select_time">시간 선택</string>
    <string name="resevation_confirm">예약 신청</string>
    <string name="complete_reservation">예약이 완료되었습니다.</string>
    <string name="user_style">원하는 스타일을 선택하세요.</string>
    <string name="large_category">대분류</string>
    <string name="small_tag">소분류</string>

    <string-array name="hair_styles">
        <item>반삭</item>
        <item>투블럭</item>
        <item>파마</item>
        <item>샤기컷</item>
        <item>울프컷</item>
        <item>다운펌</item>
    </string-array>

    <string name="preparing_massage">준비중인 기능입니다.</string>
    <string name="prepare_name_check">예약목록 확인</string>
</resources>
