<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kr.co.tjenit.beautysalon.activity.user_activity.ViewDeignerDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/red"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/designer_detail"/>

    </FrameLayout>

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:text="사람이름이표시됩니다."/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/genderTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:text="사람성별이표시됩니다."/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/nickTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:text="사람닉네임이표시됩니다."/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/majorname"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/majorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:text="연령대가표시됩니다."/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avgrating"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/avgTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:text="평점이표시됩니다."/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                android:src="@drawable/rating_star"/>
            <ImageView
                android:id="@+id/star2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                android:src="@drawable/rating_star"/>
            <ImageView
                android:id="@+id/star3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                android:src="@drawable/rating_star"/>
            <ImageView
                android:id="@+id/star4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                android:src="@drawable/rating_star"/>
            <ImageView
                android:id="@+id/star5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                android:src="@drawable/rating_star"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/portfolioView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reviewBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="리뷰남기기"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/reservationBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/do_reservation"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
